tests/errors/semantics/do_expressions_must_match_when_consumed.odl
main :: () -> void {
    y := do {
        x := false;
        if x then break;
        printint(1);
        println();
        true;
    };

    y;
};